Closed Bug 1707560 Opened 4 years ago Closed 4 years ago

don't scroll to the top if double tap on very tall element that is > 90% the width of the viewport

Categories

(Core :: Panning and Zooming, defect)

defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox89 --- fixed
firefox90 --- fixed

People

(Reporter: tnikkel, Assigned: tnikkel)

References

Details

(Whiteboard: [proton-uplift])

Attachments

(2 files)

We have code for this, it's disabled for elements that are 90% or greater the width of the viewport. This code was added in bug 1204084 for the "double tap on tall element" problem and the 90% hasn't been touched since. I can't think of a good reason why we would want to scroll to the top of the element if its 90% the width of the viewport or more.

We have code for this, it's disabled for elements that are 90% or greater the width of the viewport. This code was added in bug 1204084 for the "double tap on tall element" problem and the 90% hasn't been touched since. I can't think of a good reason why we would want to scroll to the top of the element if its 90% the width of the viewport or more.

Assignee: nobody → tnikkel
Status: NEW → ASSIGNED
Pushed by tnikkel@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0ec725406db0 Don't scroll to the top if double tap on very tall element that is > 90% the width of the viewport. r=emilio https://hg.mozilla.org/integration/autoland/rev/e42509d1b5a0 Add test. r=botond
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
Whiteboard: [proton-uplift]

Comment on attachment 9218316 [details]
Bug 1707560. Don't scroll to the top if double tap on very tall element that is > 90% the width of the viewport. r?botond

Beta/Release Uplift Approval Request

  • User impact if declined: double tap zoom on tall and wide elements scrolls to the top, which is not what users expect
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): only changes double tap to zoom code
  • String changes made/needed:
Attachment #9218316 - Flags: approval-mozilla-beta?
Attachment #9218551 - Flags: approval-mozilla-beta?

Comment on attachment 9218316 [details]
Bug 1707560. Don't scroll to the top if double tap on very tall element that is > 90% the width of the viewport. r?botond

Approved for 89 beta 7, thanks.

Attachment #9218316 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Attachment #9218551 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Regressions: 1713584
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: